images and footer content

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top bg-light">
+    <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="/" title="Homepage">
             <img class="logo" src="/images/logo.png" alt="Reka Nagy logo">
@@ -48,6 +48,41 @@
         </div>
       </nav>
 
-      
+      <div class="hero">
+        <h1>Réka Nagy</h1>
+        <h2>Front-end Developer based in Gråsten, Denmark</h2>
+        <div>
+          <a class="btn hero-btn mt-5" href="/portfolio.html" title="Portfolio by Reka Nagy">My Work</a>
+        </div>
+      </div>
+
+      <div class="skills d-flex justify-content-between flex-wrap">
+        <img class="skills-img" src="/images/html.png" alt="html-img">
+        <img class="skills-img" src="images/css.png" alt="css-img">
+        <img class="skills-img" src="images/js.png" alt="css-img">
+        <img class="skills-img" src="images/editor.png" alt="editor-img">
+        <img class="skills-img" src="images/bootstrap.png" alt="bootstrap-img">
+        <img class="skills-img" src="images/github.png" alt="github-img">
+        <img class="skills-img" src="images/hosting.png" alt="hosting-img">
+        <img class="skills-img" src="images/api.png" alt="api-img">
+        <img class="skills-img" src="images/flexbox.png" alt="flexbox-img">
+        <img class="skills-img" src="images/seo.png" alt="seo-img">
+        <img class="skills-img" src="images/responsive.png" alt="responsive-img">
+      </div>
+
+      <footer> 
+        <div class="contact-section">
+          <h2>Get in Touch</h2>
+          <p>To get in touch with me you can email me at 
+            <a class="email" href="mailto:rekanagy0609@gmil.com" title="Email Reka Nagy">rekanagy0609@gmail.com</a>
+          </p>
+          </div>
+        <div class="social-network-links mb-3">
+          <a href="https://www.linkedin.com/in/r%C3%A9ka-nagy-6099b774/" title="Reka Nagy LinkedIn" target="_blank"><i class="fa-brands fa-linkedin social-icon"></i></a>
+           <a href="https://github.com/RekaNagy" title="Reka Nagy GitHub" target="_blank"><i class="fa-brands fa-github social-icon"></i></a>
+           <a href="mailto:rekanagy0609@gmail.com"  title="Reka Nagy Email"><i class="fa-solid fa-envelope social-icon"></i></a>
+        </div>
+        <div class="footer-text">This project was coded by Réka Nagy, and it is <a href="https://github.com/RekaNagy/portfolio-project" title="Github Source-code" target="_blank">open-sourced.</a></div>
+      </footer>
 </body>
 </html>
