--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
       </div>
 
-      <div class="skills d-sm-inline-flex justify-content-sm-center flex-wrap">
+      <div class="skills d-sm-flex justify-content-sm-center flex-wrap">
         <img class="skills-img" src="/images/html.png" alt="html-img">
         <img class="skills-img" src="images/css.png" alt="css-img">
         <img class="skills-img" src="images/js.png" alt="css-img">
