--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-expand-sm fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="/" title="Homepage">
             <img class="logo" src="/images/logo.png" alt="Reka Nagy logo">
@@ -48,11 +48,11 @@
         </div>
       </nav>
 
-      <div class="hero">
+      <div class="hero-homepage">
         <h1>Réka Nagy</h1>
         <h2>Front-end Developer based in Gråsten, Denmark</h2>
         <div>
-          <a class="btn hero-btn mt-5" href="/portfolio.html" title="Portfolio by Reka Nagy">My Work</a>
+          <a class="btn hero-btn-homepage mt-5" href="/portfolio.html" title="Portfolio by Reka Nagy">My Work</a>
         </div>
       </div>
 
@@ -74,7 +74,7 @@
         <div class="contact-section">
           <h2>Get in Touch</h2>
           <p>To get in touch with me you can email me at 
-            <a class="email" href="mailto:rekanagy0609@gmil.com" title="Email Reka Nagy">rekanagy0609@gmail.com</a>
+            <a href="mailto:rekanagy0609@gmil.com" title="Email Reka Nagy">rekanagy0609@gmail.com</a>
           </p>
           </div>
         <div class="social-network-links mb-3">
