--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
 
     <div class="hero-contact"> 
         <h1 class="mb-3">Get in Touch</h1>
-        <h3 class="">To get in touch with me you can email me at 
+        <h3 class="">To get in touch with me, you can email me at 
             <a class="email" href="mailto:rekanagy0609@gmil.com" title="Email Reka Nagy">rekanagy0609@gmail.com</a>
         </h3>
         <div class="social-icons-contact-section mt-5">
