portfolio responsive fix

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,9 +50,9 @@
 
     <div class="hero-portfolio">
         <h1 class="mb-5">My Projects</h1>
-        <div class="projects d-flex justify-content-sm-evenly">
+        <div class="projects">
           <div class="card" style="width: 18rem;">
-            <img src="/images/weather_app.png" class="card-img-top p-1" alt="weather-app">
+            <img src="/images/weather_app.png" class="card-img-top img-fluid p-1" alt="weather-app">
             <div class="card-body">
               <h5 class="card-title mb-3">Weather Application</h5>
               <p class="card-text">My first application, built with APIs.
@@ -68,7 +68,7 @@
           </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="/images/loading.jpg" class="card-img-top p-1" alt="loading-img">
+            <img src="/images/loading.jpg" class="card-img-top img-fluid p-1" alt="loading-img">
             <div class="card-body">
               <h5 class="card-title mb-3">Upcoming Project</h5>
               <p class="card-text">Upcoming project.
@@ -83,7 +83,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img src="/images/loading.jpg" class="card-img-top p-1" alt="loading-img">
+            <img src="/images/loading.jpg" class="card-img-top img-fluid p-1" alt="loading-img">
             <div class="card-body">
               <h5 class="card-title mb-3">Upcoming Project</h5>
               <p class="card-text">Upcoming project.
