about me page text and css modification

--- a/about.html
+++ b/about.html
@@ -49,14 +49,21 @@
       </nav>
 
       <div class="hero-about">
-        <h1>About Me</h1>
-        <div class="d-flex flex-row justify-content-center">
-          <div class="p-2">
-            <img class="profile-img" src="/images/me.jpg" alt="profile picture">
+        <h1 class="mb-5">About Me</h1>
+        <div class="row">
+          <div class="col-sm-4">
+            <img src="/images/me.jpg" alt="Profile photo of Reka Nagy" class="img-fluid rounded profile-img">
           </div>
-          <div class="p-2">
-            <p class="about-text">
-              Hi, my name is Réka Nagy. I am a hungarian Front-end Developer, based in Denmark. 
+          <div class="col-sm-6">
+            <p>Hi, I'm Reka. Front-end Developer, based in Denmark. 
+              <br>
+              <br>
+              Prior to this I've worked as administrative-, HR- and translations-specialist.
+              <br>
+              <br>
+              I've always wanted to do more, to be more creative and learn how different websites are made, so I took the courage and trained as a front-end developer.
+              <br>
+              Coding is incredibly fulfilling, especially when I see my own work "come to life". 
             </p>
           </div>
         </div>
