profile picture adjusting

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
             <img src="/images/me.jpg" alt="Profile photo of Reka Nagy" class="img-fluid rounded profile-img">
           </div>
           <div class="col-sm-6">
-            <p>Hi, I'm Reka. Front-end Developer, based in Denmark. 
+            <p class="">Hi, I'm Réka. Front-end Developer, based in Denmark. 
               <br>
               <br>
               Prior to this I've worked as administrative-, HR- and translations-specialist.
